--- a/portfolio.html
+++ b/portfolio.html
@@ -89,7 +89,17 @@
                 rel="noreferrer noopener"
               >
                 <div>
-                  <img src="./images/portfolio1.jpg" alt="Технокряк" />
+                  <div class="portfolio-thumb">
+                    <img src="./images/portfolio1.jpg" alt="Технокряк" />
+                    <div class="portfolio-overlay">
+                      <p class="portfolio-overlay-text">
+                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                        сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                        компанію чи приватну особу.
+                      </p>
+                    </div>
+                  </div>
+
                   <div class="portfolio-description-border">
                     <h3 class="portfolio-sub-title">Технокряк</h3>
                     <p class="portfolio-description">Веб-сайт</p>
@@ -105,12 +115,22 @@
                 rel="noreferrer noopener"
               >
                 <div>
-                  <img
-                    src="./images/portfolio2.jpg"
-                    alt="New Orlean vs Golden Star"
-                    width="370"
-                    height="294"
-                  />
+                  <div class="portfolio-thumb">
+                    <img
+                      src="./images/portfolio2.jpg"
+                      alt="New Orlean vs Golden Star"
+                      width="370"
+                      height="294"
+                    />
+                    <div class="portfolio-overlay">
+                      <p class="portfolio-overlay-text">
+                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                        сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                        компанію чи приватну особу.
+                      </p>
+                    </div>
+                  </div>
+
                   <div class="portfolio-description-border">
                     <h3 class="portfolio-sub-title">
                       Постер <span lang="en">New Orlean vs Golden Star</span>
@@ -128,7 +148,17 @@
                 rel="noreferrer noopener"
               >
                 <div>
-                  <img src="./images/portfolio3.jpg" alt="Seafood" width="370" height="294" />
+                  <div class="portfolio-thumb">
+                    <img src="./images/portfolio3.jpg" alt="Seafood" width="370" height="294" />
+                    <div class="portfolio-overlay">
+                      <p class="portfolio-overlay-text">
+                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                        сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                        компанію чи приватну особу.
+                      </p>
+                    </div>
+                  </div>
+
                   <div class="portfolio-description-border">
                     <h3 class="portfolio-sub-title">Ресторан <span lang="en">Seafood</span></h3>
                     <p class="portfolio-description">Додаток</p>
@@ -144,7 +174,17 @@
                 rel="noreferrer noopener"
               >
                 <div>
-                  <img src="./images/portfolio4.jpg" alt="Prime" width="370" height="294" />
+                  <div class="portfolio-thumb">
+                    <img src="./images/portfolio4.jpg" alt="Prime" width="370" height="294" />
+                    <div class="portfolio-overlay">
+                      <p class="portfolio-overlay-text">
+                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                        сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                        компанію чи приватну особу.
+                      </p>
+                    </div>
+                  </div>
+
                   <div class="portfolio-description-border">
                     <h3 class="portfolio-sub-title">Проєкт <span lang="en">Prime</span></h3>
                     <p class="portfolio-description">Маркетинг</p>
@@ -160,7 +200,17 @@
                 rel="noreferrer noopener"
               >
                 <div>
-                  <img src="./images/portfolio5.jpg" alt="Boxes" width="370" height="294" />
+                  <div class="portfolio-thumb">
+                    <img src="./images/portfolio5.jpg" alt="Boxes" width="370" height="294" />
+                    <div class="portfolio-overlay">
+                      <p class="portfolio-overlay-text">
+                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                        сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                        компанію чи приватну особу.
+                      </p>
+                    </div>
+                  </div>
+
                   <div class="portfolio-description-border">
                     <h3 class="portfolio-sub-title">Проєкт <span lang="en">Boxes</span></h3>
                     <p class="portfolio-description">Додаток</p>
@@ -176,12 +226,22 @@
                 rel="noreferrer noopener"
               >
                 <div>
-                  <img
-                    src="./images/portfolio6.jpg"
-                    alt="Inspiration has no Borders"
-                    width="370"
-                    height="294"
-                  />
+                  <div class="portfolio-thumb">
+                    <img
+                      src="./images/portfolio6.jpg"
+                      alt="Inspiration has no Borders"
+                      width="370"
+                      height="294"
+                    />
+                    <div class="portfolio-overlay">
+                      <p class="portfolio-overlay-text">
+                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                        сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                        компанію чи приватну особу.
+                      </p>
+                    </div>
+                  </div>
+
                   <div class="portfolio-description-border">
                     <h3 class="portfolio-sub-title" lang="en">Inspiration has no Borders</h3>
                     <p class="portfolio-description">Веб-сайт</p>
@@ -198,12 +258,22 @@
                 rel="noreferrer noopener"
               >
                 <div>
-                  <img
-                    src="./images/portfolio7.jpg"
-                    alt="Limited Edition"
-                    width="370"
-                    height="294"
-                  />
+                  <div class="portfolio-thumb">
+                    <img
+                      src="./images/portfolio7.jpg"
+                      alt="Limited Edition"
+                      width="370"
+                      height="294"
+                    />
+                    <div class="portfolio-overlay">
+                      <p class="portfolio-overlay-text">
+                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                        сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                        компанію чи приватну особу.
+                      </p>
+                    </div>
+                  </div>
+
                   <div class="portfolio-description-border">
                     <h3 class="portfolio-sub-title">
                       Видання <span lang="en">Limited Edition</span>
@@ -221,7 +291,17 @@
                 rel="noreferrer noopener"
               >
                 <div>
-                  <img src="./images/portfolio8.jpg" alt="LAB" width="370" height="294" />
+                  <div class="portfolio-thumb">
+                    <img src="./images/portfolio8.jpg" alt="LAB" width="370" height="294" />
+                    <div class="portfolio-overlay">
+                      <p class="portfolio-overlay-text">
+                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                        сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                        компанію чи приватну особу.
+                      </p>
+                    </div>
+                  </div>
+
                   <div class="portfolio-description-border">
                     <h3 class="portfolio-sub-title">Проєкт <span lang="en">LAB</span></h3>
                     <p class="portfolio-description">Маркетинг</p>
@@ -237,12 +317,22 @@
                 rel="noreferrer noopener"
               >
                 <div>
-                  <img
-                    src="./images/portfolio9.jpg"
-                    alt="Growing Business"
-                    width="370"
-                    height="294"
-                  />
+                  <div class="portfolio-thumb">
+                    <img
+                      src="./images/portfolio9.jpg"
+                      alt="Growing Business"
+                      width="370"
+                      height="294"
+                    />
+                    <div class="portfolio-overlay">
+                      <p class="portfolio-overlay-text">
+                        Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та
+                        сервісів. Все це дозволить відвідувачу отримати вичерпні відомості про
+                        компанію чи приватну особу.
+                      </p>
+                    </div>
+                  </div>
+
                   <div class="portfolio-description-border">
                     <h3 class="portfolio-sub-title" lang="en">Growing Business</h3>
                     <p class="portfolio-description">Додаток</p>
@@ -255,68 +345,90 @@
       </section>
     </main>
 
-		<footer class="footer">
-			<div class="footer-conteiner conteiner">
-				<div>
-					<a href="./index.html" class="logo link footer-logo">Web<span class="logo-footer">Studio</span></a>
-					<address class="addres">
-						<ul class="footer-list list">
-							<li class="footer-list-item">
-								<a href="https://goo.gl/maps/quumTiExGeRSUyE26" target="_blank" rel="noreferrer noopener"
-									class="footer-adres link">м. Київ, пр-т Лесі Українки, 26
-								</a>
-							</li>
-							<li class="footer-list-item">
-								<a href="mailto:info@devstudio.com" class="footer-mail link">info@devstudio.com</a>
-							</li>
-							<li class="footer-list-item">
-								<a href="tel:+380961111111" class="footer-tel link">+38 096 111 11 11</a>
-							</li>
-						</ul>
-					</address>
-				</div>
-		
-				<div class="footer-sotials">
-					<p class="footer-socials-title">приєднуйтесь</p>
-					<ul class="socials-contacts list">
-						<li class="sotials-item">
-							<a class="socials-link footer-socials-link link" href="http://instagram.com" target="_blank"
-								rel="noopener noreferrer">
-								<svg class="footer-icon" width="20" height="20">
-									<use href="./images/icons.svg#instagram"></use>
-								</svg>
-							</a>
-						</li>
-		
-						<li class="sotials-item">
-							<a class="socials-link footer-socials-link link" href="http://twitter.com" target="_blank"
-								rel="noopener noreferrer">
-								<svg class="footer-icon" width="20" height="20">
-									<use href="./images/icons.svg#twitter"></use>
-								</svg>
-							</a>
-						</li>
-		
-						<li class="sotials-item">
-							<a class="socials-link footer-socials-link link" href="http://facebook.com" target="_blank"
-								rel="noopener noreferrer">
-								<svg class="footer-icon" width="20" height="20">
-									<use href="./images/icons.svg#facebook"></use>
-								</svg>
-							</a>
-						</li>
-		
-						<li class="sotials-item">
-							<a class="socials-link footer-socials-link link" href="http://linkedin.com" target="_blank"
-								rel="noopener noreferrer">
-								<svg class="footer-icon" width="20" height="20">
-									<use href="./images/icons.svg#linkedin"></use>
-								</svg>
-							</a>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</footer>
+    <footer class="footer">
+      <div class="footer-conteiner conteiner">
+        <div>
+          <a href="./index.html" class="logo link footer-logo"
+            >Web<span class="logo-footer">Studio</span></a
+          >
+          <address class="addres">
+            <ul class="footer-list list">
+              <li class="footer-list-item">
+                <a
+                  href="https://goo.gl/maps/quumTiExGeRSUyE26"
+                  target="_blank"
+                  rel="noreferrer noopener"
+                  class="footer-adres link"
+                  >м. Київ, пр-т Лесі Українки, 26
+                </a>
+              </li>
+              <li class="footer-list-item">
+                <a href="mailto:info@devstudio.com" class="footer-mail link">info@devstudio.com</a>
+              </li>
+              <li class="footer-list-item">
+                <a href="tel:+380961111111" class="footer-tel link">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+
+        <div class="footer-sotials">
+          <p class="footer-socials-title">приєднуйтесь</p>
+          <ul class="socials-contacts list">
+            <li class="sotials-item">
+              <a
+                class="socials-link footer-socials-link link"
+                href="http://instagram.com"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="sotials-item">
+              <a
+                class="socials-link footer-socials-link link"
+                href="http://twitter.com"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="sotials-item">
+              <a
+                class="socials-link footer-socials-link link"
+                href="http://facebook.com"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#facebook"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="sotials-item">
+              <a
+                class="socials-link footer-socials-link link"
+                href="http://linkedin.com"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                <svg class="footer-icon" width="20" height="20">
+                  <use href="./images/icons.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
