--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <section class="hero">
         <div class="conteiner">
           <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-          <button type="button" class="hero-btn button">Замовити послугу</button>
+          <button data-modal-open type="button" class="hero-btn button">Замовити послугу</button>
         </div>
       </section>
 
@@ -129,13 +129,22 @@
           <h2 class="working-title">Чим ми займаємося</h2>
           <ul class="working-list list">
             <li class="working-list-item">
-              <img src="./images/img1.jpg" alt="Написання сайту" width="370" height="294" />
+              <img src="./images/img1.jpg" alt="Десктопні додатки" width="370" height="294" />
+              <div class="working-overlay">
+                <p class="working-overlay-text">Десктопні додатки</p>
+              </div>
             </li>
             <li class="working-list-item">
-              <img src="./images/img2.jpg" alt="Адаптація сайту" width="370" height="294" />
+              <img src="./images/img2.jpg" alt="Мобільні додатки" width="370" height="294" />
+              <div class="working-overlay">
+                <p class="working-overlay-text">Мобільні додатки</p>
+              </div>
             </li>
             <li class="working-list-item">
-              <img src="./images/img3.jpg" alt="Дизайн сайту" width="370" height="294" />
+              <img src="./images/img3.jpg" alt="Дизайнерські рішення" width="370" height="294" />
+              <div class="working-overlay">
+                <p class="working-overlay-text">Дизайнерські рішення</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -533,5 +542,19 @@
         </div>
       </div>
     </footer>
+
+<!-- Modal window -->
+
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button data-modal-close class="modal-button-close button">
+					<svg class="icon-close" width="18" height="18">
+						<use href="/images/icons.svg#icon-close"></use>
+					</svg>
+				</button>
+      </div>
+    </div>
+
+    <script src="./js/modal.js"></script>
   </body>
 </html>
